force-app/main/default/objects/Receipt__c/Receipt__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <displayFormat>RC-{00000}</displayFormat>
        <label>Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>