force-app/main/default/objects/Receipt__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh Grameena Vikas Bank</fullName>
            </value>
            <value>
                <fullName>Andhra Pragathi Grameena Bank</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh Rural Bank</fullName>
            </value>
            <value>
                <fullName>Aryavart Bank</fullName>
            </value>
            <value>
                <fullName>Assam Gramin Vikash Bank</fullName>
            </value>
            <value>
                <fullName>Au Small Finance Bank Limited</fullName>
            </value>
            <value>
                <fullName>Axis Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Bajaj Housing Finance</fullName>
            </value>
            <value>
                <fullName>Bandhan Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Bangiya Gramin Vikas Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of India</fullName>
            </value>
            <value>
                <fullName>Bank of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Baroda Gujarat Gramin Bank</fullName>
            </value>
            <value>
                <fullName>Baroda Rajasthan Kshetriya Gramin Bank</fullName>
            </value>
            <value>
                <fullName>Baroda UP Bank*</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>Capital Small Finance Bank Limited</fullName>
            </value>
            <value>
                <fullName>Central Bank of India</fullName>
            </value>
            <value>
                <fullName>Chaitanya Godavari Grameena Bank</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh Rajya Gramin Bank</fullName>
            </value>
            <value>
                <fullName>City Union Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>CSB Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Dakshin Bihar Gramin Bank</fullName>
            </value>
            <value>
                <fullName>DCB Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>Dhanlaxmi Bank Ltd.</fullName>
            </value>
            <value>
                <fullName>DNS Bank</fullName>
            </value>
            <value>
                <fullName>Ellaquai Dehati Bank</fullName>
            </value>
            <value>
                <fullName>Equitas Small Finance Bank Limited</fullName>
            </value>
            <value>
                <fullName>ESAF Small Finance Bank Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>