force-app/main/default/objects/Receipt__c/fields/Demand_Apportion_Action__c.field-meta.xml
<CustomField>
    <fullName>Demand_Apportion_Action__c</fullName>
    <formula>IF(ISPICKVAL(Receipt_Type__c,&apos;Other Charges&apos;),HYPERLINK(&quot;/apex/EX_CallLwcReceiptDemandAction?Id=&quot;&amp; Id , &quot;Click here&quot;, &quot;_blank&quot;),&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Apportion Action</label>
    <type>Text</type>
</CustomField>