force-app/main/default/objects/Receipt__c/fields/On_Account_Money__c.field-meta.xml
<CustomField>
    <fullName>On_Account_Money__c</fullName>
    <formula>Amount__c -  Total_Money_Apportioned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Account Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>