force-app/main/default/objects/Receipt__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment Successful</fullName>
            </value>
            <value>
                <fullName>Payment Failed - Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Payment Failed – Signature mismatch</fullName>
            </value>
            <value>
                <fullName>Payment Failed – PDC</fullName>
            </value>
            <value>
                <fullName>Payment Failed – Stop payment by client</fullName>
            </value>
            <value>
                <fullName>Payment Failed – Overwriting</fullName>
            </value>
            <value>
                <fullName>Payment Failed – Amount Mismatch</fullName>
            </value>
            <value>
                <fullName>Payment in Process</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>