force-app/main/default/objects/Receipt__c/fields/Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Number__c</fullName>
    <formula>(Booking__r.Project__r.Name) &amp; &apos;/&apos; &amp; Left(Booking__r.Tower__r.Name ,2) &amp; &apos;-&apos; &amp; Booking__r.Name &amp; &apos;/&apos; &amp; TEXT(Receipt_Date__c) &amp; &apos;/&apos; &amp; Name</formula>
    <label>Receipt Number</label>
    <type>Text</type>
</CustomField>