force-app/main/default/objects/Receipt__c/fields/Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Type__c</fullName>
    <label>Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Cost</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Stamp Duty</fullName>
            </value>
            <value>
                <fullName>Registration Charges</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Interest Flat Cost</fullName>
            </value>
            <value>
                <fullName>Interest GST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>