force-app/main/default/objects/Receipt__c/fields/Token_Amount_Flat_Cost__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount_Flat_Cost__c</fullName>
    <formula>Amount__c / (1 + (Booking__r.Quotation__r.AV_GST_Percentage__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Amount Flat Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>