force-app/main/default/objects/Receipt__c/fields/Token_Amount_Tax__c.field-meta.xml
<CustomField>
    <fullName>Token_Amount_Tax__c</fullName>
    <formula>Amount__c - Token_Amount_Flat_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Amount Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>