force-app/main/default/objects/Receipt__c/fields/Total_Money_Apportioned__c.field-meta.xml
<CustomField>
    <fullName>Total_Money_Apportioned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Money Apportioned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>